# storia

./: LICENSE  README.md  input.txt  pyproject.toml  read.sh
src/storia/: __init__.py  ai.py  api_key_manager.py  constant.py  helper.py  main.py  prompt.py
src/storia/languages/: italian.json
